--- a/css/style.css
+++ b/css/style.css
@@ -352,6 +352,15 @@ body {
 .dreams-picture {
   background-image: url(../img/dreams.jpg); }
 
+.application-picture {
+  background-image: url(../img/red.jpg); }
+
+.sample-picture {
+  background-image: url(../img/book.jpg); }
+
+.meditation-picture {
+  background-image: url(../img/ahead.jpg); }
+
 hr {
   display: inline-block;
   padding-left: 10rem;
@@ -386,6 +395,22 @@ hr {
 
 .vert {
   font-size: 1.6rem; }
+
+.samplereading {
+  text-align: center; }
+  .samplereading .para-sample ol {
+    list-style: none;
+    font-size: 1.5rem;
+    counter-reset: my-awesome-counter; }
+    .samplereading .para-sample ol li {
+      counter-increment: my-awesome-counter; }
+      .samplereading .para-sample ol li::before {
+        content: counter(my-awesome-counter) ". ";
+        color: teal;
+        font-weight: bold;
+        padding-right: .5rem; }
+  .samplereading .para-sample p {
+    text-align: center; }
 
 .section-inside {
   background-color: #fff; }
