--- a/css/style.css
+++ b/css/style.css
@@ -337,6 +337,46 @@ body {
 .para_link:active {
   color: #ccc; }
 
+.hidepara .hide {
+  display: table;
+  overflow: hidden;
+  background-color: #f7f7f7;
+  -webkit-transition: all .5s ease;
+  -o-transition: all .5s ease;
+  transition: all .5s ease;
+  margin-bottom: 2rem; }
+
+.hidepara label h6 {
+  cursor: pointer; }
+  .hidepara label h6:hover, .hidepara label h6:active {
+    border-bottom: 1px solid teal; }
+
+.innerpara {
+  padding: 2rem; }
+
+.hidepara input[type="checkbox"]:checked + .hide {
+  height: 0;
+  opacity: 0;
+  display: block; }
+
+.faq {
+  background-color: #fff;
+  padding: 1rem 7rem;
+  list-style: none;
+  font-size: 1.5rem;
+  counter-reset: my-awesome-counter; }
+  .faq li {
+    counter-increment: my-awesome-counter;
+    padding-bottom: 1rem; }
+    .faq li::before {
+      content: counter(my-awesome-counter) ". ";
+      color: teal;
+      font-weight: bold;
+      padding-right: .5rem; }
+
+input {
+  opacity: 0; }
+
 .overview-picture {
   background-image: url(../img/overview.jpg); }
 
@@ -361,6 +401,12 @@ body {
 .meditation-picture {
   background-image: url(../img/ahead.jpg); }
 
+.workshop-picture {
+  background-image: url(../img/beach.jpg); }
+
+.start-picture {
+  background-image: url(../img/flower.jpg); }
+
 hr {
   display: inline-block;
   padding-left: 10rem;
@@ -372,6 +418,10 @@ hr {
   background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0.05) 0%, rgba(0, 0, 0, 0.1) 100%);
   background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0.05) 0%, rgba(0, 0, 0, 0.1) 100%);
   background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.05) 0%, rgba(0, 0, 0, 0.1) 100%); }
+
+.work-hr {
+  padding-left: 5rem;
+  padding-right: 5rem; }
 
 .inside-nav-container {
   text-align: center; }
