--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,9 +7,10 @@
 @import "base/typography";
 @import "base/utilities";
 
-@import "components/button";
 
+@import "components/button";
 @import "components/footer";
+@import "components/togglepara";
 
 @import "layout/banner";
 @import "layout/content";
