--- a/sass/layout/_banner.scss
+++ b/sass/layout/_banner.scss
@@ -31,6 +31,24 @@
 .start-picture {
   background-image: url(../img/flower.jpg);
 }
+.faqs-picture {
+  background-image: url(../img/kobe.jpg);
+}
+.modules-picture {
+  background-image: url(../img/mountain.jpg);
+}
+.lifestudy-picture {
+  background-image: url(../img/page.jpg);
+}
+.depthcontext-picture {
+  background-image: url(../img/coral.jpg);
+}
+.l-integration-picture {
+  background-image: url(../img/blur.jpg);
+}
+.l-experience-picture {
+  background-image: url(../img/adventure.jpg);
+}
 
 hr {
   display: inline-block;
@@ -47,6 +65,10 @@ hr {
 .work-hr {
   padding-left: 5rem;
   padding-right: 5rem;
+}
+.mod-hr {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .inside-nav-container {
