--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -14,6 +14,10 @@
     margin-bottom: 1.5rem;
 }
 
+.u-margin-bottom-small-2 {
+    margin-bottom: 2.5rem;
+}
+
 .u-margin-top-big {
     margin-top: 8rem;
 }
@@ -24,4 +28,7 @@
 
 .u-margin-top-small {
     margin-top: 1.5rem;
+}
+.u-margin-top-small-2 {
+    margin-top: 2.5rem;
 }
