--- a/sass/layout/_banner.scss
+++ b/sass/layout/_banner.scss
@@ -34,6 +34,12 @@
 .faqs-picture {
   background-image: url(../img/kobe.jpg);
 }
+.reasons-picture {
+  background-image: url(../img/fish.jpg);
+}
+.faq-picture {
+  background-image: url(../img/bloom.jpg);
+}
 .modules-picture {
   background-image: url(../img/mountain.jpg);
 }
@@ -48,6 +54,15 @@
 }
 .l-experience-picture {
   background-image: url(../img/adventure.jpg);
+}
+.contact-picture {
+  background-image: url(../img/sunny.jpg);
+}
+.support-picture {
+  background-image: url(../img/autumn.jpg);
+}
+.refer-picture {
+  background-image: url(../img/trees.jpg);
 }
 
 hr {
