--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -83,3 +83,68 @@
         transform: translateY(0);
     }
 }
+
+
+
+// Form Button
+// Form Button
+// Form Button
+.bton,
+.bton:link,
+.bton:visited {
+    font-size: 1.6rem;
+    padding: 1.4rem 3rem;
+    border-radius: 10rem;
+    text-transform: uppercase;
+    display: inline-block;
+    text-decoration: none;
+    position: relative;
+    -webkit-transition: all 0.4s;
+    transition: all 0.4s;
+    font-weight: 400;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    /*Add later when we use this for the button in form*/
+    border: none;
+    cursor: pointer;
+}
+
+.bton:hover {
+    -webkit-transform: translateY(-3px);
+    transform: translateY(-3px);
+    -webkit-box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
+}
+
+.bton:active {
+    -webkit-transform: translateY(-1px);
+    transform: translateY(-1px);
+    -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+}
+
+.bton:focus {
+    outline: none;
+    //background-color: #2e864b;
+    background-color: $color-teal;
+}
+
+.bton--white {
+    background-color: #fff;
+    color: #777;
+}
+
+.bton--white::after {
+    background-color: #fff;
+}
+
+.bton--green {
+    //background-color: #55c57a;
+    background-color: teal;
+    color: #fff;
+}
+
+.bton--green::after {
+    //background-color: #55c57a;
+    background-color: teal;
+}
