--- a/css/style.css
+++ b/css/style.css
@@ -578,6 +578,33 @@ textarea {
 .join-picture {
   background-image: url(../img/garden.jpg); }
 
+.therapy-picture {
+  background-image: url(../img/blossom.jpg); }
+
+.contiedu-picture {
+  background-image: url(../img/blue.jpg); }
+
+.therapycredits-picture {
+  background-image: url(../img/daylight.jpg); }
+
+.nursing-picture {
+  background-image: url(../img/alaska.jpg); }
+
+.nursingbenefits-picture {
+  background-image: url(../img/cloudsday.jpg); }
+
+.nursingcredits-picture {
+  background-image: url(../img/alpine.jpg); }
+
+.nursingendorse-picture {
+  background-image: url(../img/clouds.jpg); }
+
+.nursingarticle-picture {
+  background-image: url(../img/cascade.jpg); }
+
+.nursingworkshop-picture {
+  background-image: url(../img/beautyblossom.jpg); }
+
 hr {
   display: inline-block;
   padding-left: 10rem;
@@ -685,6 +712,17 @@ table {
   background-color: #f4f4f4; }
   .quotes p {
     font-weight: bold; }
+
+.article-link li a:link, .article-link li a:visited {
+  text-decoration: none;
+  color: teal;
+  margin-right: 1rem;
+  margin-left: 1rem;
+  padding-bottom: 3px;
+  border-bottom: 1px solid transparent; }
+
+.article-link li a:hover, .article-link li a:active {
+  border-bottom: 1px solid teal; }
 
 .section-inside {
   background-color: #fff; }
