--- a/css/style.css
+++ b/css/style.css
@@ -161,6 +161,9 @@ body {
 .u-margin-bottom-small {
   margin-bottom: 1.5rem; }
 
+.u-margin-bottom-small-1 {
+  margin-bottom: 1rem; }
+
 .u-margin-bottom-small-2 {
   margin-bottom: 2.5rem; }
 
@@ -605,6 +608,9 @@ textarea {
 .nursingworkshop-picture {
   background-image: url(../img/beautyblossom.jpg); }
 
+.articles-picture {
+  background-image: url(../img/green.jpg); }
+
 hr {
   display: inline-block;
   padding-left: 10rem;
@@ -616,6 +622,12 @@ hr {
   background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0.05) 0%, rgba(0, 0, 0, 0.1) 100%);
   background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0.05) 0%, rgba(0, 0, 0, 0.1) 100%);
   background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.05) 0%, rgba(0, 0, 0, 0.1) 100%); }
+
+.trademark-line {
+  display: block;
+  padding: 0;
+  margin-top: 7rem;
+  height: 1px; }
 
 .work-hr {
   padding-left: 5rem;
