--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -14,6 +14,10 @@
     margin-bottom: 1.5rem;
 }
 
+.u-margin-bottom-small-1 {
+    margin-bottom: 1rem;
+}
+
 .u-margin-bottom-small-2 {
     margin-bottom: 2.5rem;
 }
