--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -15,7 +15,7 @@
 }
 
 .u-margin-bottom-small-1 {
-    margin-bottom: 1rem;
+    margin-bottom: 1rem !important;
 }
 
 .u-margin-bottom-small-2 {
@@ -32,6 +32,9 @@
 
 .u-margin-top-small {
     margin-top: 1.5rem;
+}
+.u-margin-top-small-1 {
+    margin-top: 1rem;
 }
 .u-margin-top-small-2 {
     margin-top: 2.5rem;
