--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,7 @@ body {
   margin-bottom: 1.5rem; }
 
 .u-margin-bottom-small-1 {
-  margin-bottom: 1rem; }
+  margin-bottom: 1rem !important; }
 
 .u-margin-bottom-small-2 {
   margin-bottom: 2.5rem; }
@@ -175,6 +175,9 @@ body {
 
 .u-margin-top-small {
   margin-top: 1.5rem; }
+
+.u-margin-top-small-1 {
+  margin-top: 1rem; }
 
 .u-margin-top-small-2 {
   margin-top: 2.5rem; }
