--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -2,6 +2,10 @@
     text-align: center; //inline block get centered in the parent...
 }
 
+.u-center-left {
+    text-align: left !important;
+}
+
 .u-italicize-text {
   font-style: italic;
 }
