--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -17,6 +17,28 @@
   // color: teal;
 }
 
+@mixin page-links {
+
+  &:link,
+  &:visited {
+    text-decoration: none;
+    color: teal;
+    margin-right: 1rem;
+    margin-left: 1rem;
+    padding-bottom: 3px;
+    border-bottom: 1px solid transparent;
+  }
+
+  &:hover,
+  &:active {
+      border-bottom: 1px solid teal;
+  }
+
+}
+
+
+
+
 // @mixin centerhorizontalvertical {
 //         top: 50%;
 //         left: 50%;
