--- a/css/style.css
+++ b/css/style.css
@@ -164,6 +164,9 @@ body {
 .u-margin-bottom-medium {
   margin-bottom: 4rem; }
 
+.u-margin-right-medium {
+  margin-right: 3rem !important; }
+
 .u-margin-bottom-small {
   margin-bottom: 1.5rem; }
 
@@ -171,7 +174,7 @@ body {
   margin-bottom: 1rem !important; }
 
 .u-margin-bottom-small-2 {
-  margin-bottom: 2.5rem; }
+  margin-bottom: 2.5rem !important; }
 
 .u-margin-top-big {
   margin-top: 8rem; }
@@ -187,6 +190,11 @@ body {
 
 .u-margin-top-small-2 {
   margin-top: 2.5rem; }
+
+.small-font-p {
+  margin-bottom: 2.5rem !important; }
+  .small-font-p p {
+    font-size: 1.5rem !important; }
 
 .btn:link, .btn:visited {
   text-transform: uppercase;
@@ -705,6 +713,14 @@ hr {
       font-weight: bold;
       padding-right: .5rem; }
 
+.books-titles {
+  font-size: 1.6rem;
+  color: teal;
+  background-color: #f7f7f7;
+  padding: 1rem;
+  border-bottom: 1px solid #e8e8e8;
+  margin-bottom: 1rem; }
+
 table {
   font-size: 1.6rem;
   margin-left: 2.5rem; }
@@ -735,7 +751,14 @@ table {
     background-color: #f7f7f7; }
 
 .cd-img {
-  width: 65%; }
+  width: 70%;
+  margin-bottom: 2rem;
+  margin-top: 1rem;
+  border: 1px solid teal;
+  border-radius: 1rem; }
+
+.col-1-of-5 .cd-img {
+  width: 120%; }
 
 .quotes {
   padding: 2rem;
@@ -870,6 +893,8 @@ table {
     width: calc( 2 * ((100% - 3 * 6rem) / 4 ) + 6rem); }
   .row .col-3-of-4 {
     width: calc( 3 * ((100% - 3 * 6rem) / 4 ) + 2 * 6rem); }
+  .row .col-1-of-5 {
+    width: calc( (100% - 4 * 6rem) / 5); }
 
 .expand {
   max-width: 100% !important;
