--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -18,6 +18,11 @@
     margin-bottom: 4rem;
 }
 
+
+.u-margin-right-medium {
+    margin-right: 3rem !important;
+}
+
 .u-margin-bottom-small {
     margin-bottom: 1.5rem;
 }
@@ -27,7 +32,7 @@
 }
 
 .u-margin-bottom-small-2 {
-    margin-bottom: 2.5rem;
+    margin-bottom: 2.5rem !important;
 }
 
 .u-margin-top-big {
@@ -46,4 +51,12 @@
 }
 .u-margin-top-small-2 {
     margin-top: 2.5rem;
+}
+
+
+.small-font-p {
+  margin-bottom: 2.5rem !important;
+  p {
+    font-size: 1.5rem !important;
+  }
 }
