--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -26,6 +26,9 @@
 .u-margin-right-medium {
     margin-right: 3rem !important;
 }
+.u-margin-left-medium {
+    margin-left: 3rem !important;
+}
 
 .u-margin-bottom-small {
     margin-bottom: 1.5rem !important;
@@ -51,7 +54,7 @@
     margin-top: 1.5rem;
 }
 .u-margin-top-small-1 {
-    margin-top: 1rem;
+    margin-top: 1rem !important;
 }
 .u-margin-top-small-2 {
     margin-top: 2.5rem;
