--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -51,13 +51,13 @@
 }
 
 .u-margin-top-small {
-    margin-top: 1.5rem;
+    margin-top: 1.5rem !important;
 }
 .u-margin-top-small-1 {
     margin-top: 1rem !important;
 }
 .u-margin-top-small-2 {
-    margin-top: 2.5rem;
+    margin-top: 2.5rem !important;
 }
 
 
