--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -84,6 +84,8 @@
               margin-left: 7rem;
               margin-bottom: -1rem;
 
+              color: #999; //color of the disc
+
             }
 
 
