--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -280,9 +280,11 @@
 
 .section-content {
     //height: 95vh;
-    height: 100vh;
+   height: 100vh;
+    height: 80vh;
 
-    background-image: url(../img/hero2.jpg);
+    // background-image: url(../img/ira-photo.png);
+    background-image: url(../img/ira2.jpg);
     // background-image: linear-gradient(
     //     to right bottom,
     //     rgba($color-primary-light, 0.801),
