--- a/css/style.css
+++ b/css/style.css
@@ -224,6 +224,31 @@ body {
     position: sticky;
     top: 0; }
 
+.btan {
+  font-size: 1.6rem; }
+  .btan:link, .btan:visited {
+    display: inline-block;
+    padding: 1rem 3rem;
+    text-decoration: none;
+    -webkit-transition: background-color 0.2s border 0.2s color 0.2s;
+    -o-transition: background-color 0.2s border 0.2s color 0.2s;
+    transition: background-color 0.2s border 0.2s color 0.2s; }
+  .btan-full:link, .btan-full:visited {
+    color: #fff;
+    background-color: #008080;
+    border: 1px solid #008080;
+    margin-right: 1.5rem; }
+  .btan-full:hover, .btan-full:active {
+    border: 1px solid #009999; }
+  .btan-ghost:link, .btan-ghost:visited {
+    border: 1px solid #008080;
+    color: #008080; }
+  .btan-ghost:hover, .btan-ghost:active {
+    border: 1px solid #009999;
+    color: #fff; }
+  .btan:hover, .btan:active {
+    background-color: #009999; }
+
 .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
@@ -1235,9 +1260,24 @@ table {
 .section-content {
   height: 100vh;
   height: 80vh;
-  background-image: url(../img/ira2.jpg);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url(../img/ira2.jpg);
+  background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/ira2.jpg);
+  background-image: -o-linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/ira2.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/ira2.jpg);
   background-size: cover;
-  background-position: top; }
+  background-position: top;
+  position: relative; }
+  .section-content header .hero-text-box {
+    position: absolute;
+    top: 60%;
+    left: 37%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); }
+  .section-content header h1 {
+    color: #fff;
+    font-size: 2.2rem;
+    margin-bottom: 2rem; }
 
 .section-workshop {
   padding: 7%;
@@ -1274,7 +1314,7 @@ table {
       color: midnightblue; }
 
 .section-the-method {
-  height: 100vh;
+  height: 80vh;
   background-image: -webkit-linear-gradient(195deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 80%), url(../img/bench.jpg);
   background-image: -o-linear-gradient(195deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 80%), url(../img/bench.jpg);
   background-image: linear-gradient(-105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 80%), url(../img/bench.jpg);
