--- a/css/style.css
+++ b/css/style.css
@@ -1260,24 +1260,36 @@ table {
 .section-content {
   height: 100vh;
   height: 80vh;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url(../img/ira2.jpg);
-  background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/ira2.jpg);
-  background-image: -o-linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/ira2.jpg);
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/ira2.jpg);
+  background-image: -webkit-linear-gradient(10deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 55%, transparent 80%), url(../img/ira2.jpg);
+  background-image: -o-linear-gradient(10deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 55%, transparent 80%), url(../img/ira2.jpg);
+  background-image: linear-gradient(80deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 55%, transparent 80%), url(../img/ira2.jpg);
+  background-image: -webkit-linear-gradient(10deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.8) 55%, transparent 80%), url(../img/ira2.jpg);
+  background-image: -o-linear-gradient(10deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.8) 55%, transparent 80%), url(../img/ira2.jpg);
+  background-image: linear-gradient(80deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.8) 55%, transparent 80%), url(../img/ira2.jpg);
+  background-image: -webkit-linear-gradient(10deg, rgba(255, 189, 189, 0.8) 0%, rgba(54, 115, 72, 0.8) 55%, transparent 80%), url(../img/ira2.jpg);
+  background-image: -o-linear-gradient(10deg, rgba(255, 189, 189, 0.8) 0%, rgba(54, 115, 72, 0.8) 55%, transparent 80%), url(../img/ira2.jpg);
+  background-image: linear-gradient(80deg, rgba(255, 189, 189, 0.8) 0%, rgba(54, 115, 72, 0.8) 55%, transparent 80%), url(../img/ira2.jpg);
   background-size: cover;
   background-position: top;
   position: relative; }
   .section-content header .hero-text-box {
     position: absolute;
     top: 60%;
-    left: 37%;
+    left: 30%;
     -webkit-transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%); }
-  .section-content header h1 {
-    color: #fff;
-    font-size: 2.2rem;
-    margin-bottom: 2rem; }
+    .section-content header .hero-text-box h1 {
+      color: #fff;
+      font-size: 2.2rem;
+      margin-bottom: 2rem; }
+      .section-content header .hero-text-box h1 .tagline {
+        font-weight: 300; }
+    .section-content header .hero-text-box .tagline2 {
+      font-style: italic;
+      margin-top: 3rem;
+      font-size: 1.6rem;
+      color: #000; }
 
 .section-workshop {
   padding: 7%;
