--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -283,12 +283,30 @@
    height: 100vh;
     height: 80vh;
 
+    background-image: linear-gradient(80deg,
+                    rgba(255, 255, 255, 0.9) 0%,
+                     rgba(255, 255, 255, 0.9) 55%,
+                     transparent 80%),
+                     url(../img/ira2.jpg);
+
+    background-image: linear-gradient(80deg,
+                    rgba(0, 0, 0, 0.8) 0%,
+                     rgba(0, 0, 0, 0.8) 55%,
+                     transparent 80%),
+                     url(../img/ira2.jpg);
+
+    background-image: linear-gradient(80deg,
+                    rgba(255, 189, 189, 0.8) 0%,
+                     rgba(54, 115, 72, 0.8) 55%,
+                     transparent 80%),
+                     url(../img/ira2.jpg);
+
     // background-image: url(../img/ira-photo.png);
     // background-image: url(../img/ira2.jpg);
-    background-image: linear-gradient(
-        rgba($color-black, 0.7),
-        rgba($color-black, 0.7)),
-    url(../img/ira2.jpg);
+    // background-image: linear-gradient(
+    //     rgba($color-black, 0.7),
+    //     rgba($color-black, 0.7)),
+    // url(../img/ira2.jpg);
     // background-image: linear-gradient(
     //     to right bottom,
     //     rgba($color-primary-light, 0.801),
@@ -306,11 +324,14 @@
         // width: 104rem;
         // width: 66%;
         top: 60%;
-        left: 37%;
+        left: 30%;
         transform: translate(-50%,-50%);
-      }
+
        h1 {
          color: $color-white;
+         // color: #5d6e73;
+         // color: $color-grey-dark;
+
          font-size: 2.2rem;
          // font-weight: 300;
          // text-transform: uppercase;
@@ -318,7 +339,20 @@
          // word-spacing: 3px;
          margin-bottom: 2rem;
 
+         .tagline {
+           font-weight: 300;
+           // text-transform: uppercase;
+         }
+
        }
+
+       .tagline2 {
+         font-style: italic;
+         margin-top: 3rem;
+         font-size: 1.6rem;
+         color: $color-black;
+       }
+     }
     }
 
 }
