--- a/css/style.css
+++ b/css/style.css
@@ -1258,38 +1258,35 @@ table {
       margin-bottom: 3rem; }
 
 .section-content {
-  height: 100vh;
-  height: 80vh;
-  background-image: -webkit-linear-gradient(10deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 55%, transparent 80%), url(../img/ira2.jpg);
-  background-image: -o-linear-gradient(10deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 55%, transparent 80%), url(../img/ira2.jpg);
-  background-image: linear-gradient(80deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 55%, transparent 80%), url(../img/ira2.jpg);
-  background-image: -webkit-linear-gradient(10deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.8) 55%, transparent 80%), url(../img/ira2.jpg);
-  background-image: -o-linear-gradient(10deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.8) 55%, transparent 80%), url(../img/ira2.jpg);
-  background-image: linear-gradient(80deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.8) 55%, transparent 80%), url(../img/ira2.jpg);
-  background-image: -webkit-linear-gradient(10deg, rgba(255, 189, 189, 0.8) 0%, rgba(54, 115, 72, 0.8) 55%, transparent 80%), url(../img/ira2.jpg);
-  background-image: -o-linear-gradient(10deg, rgba(255, 189, 189, 0.8) 0%, rgba(54, 115, 72, 0.8) 55%, transparent 80%), url(../img/ira2.jpg);
-  background-image: linear-gradient(80deg, rgba(255, 189, 189, 0.8) 0%, rgba(54, 115, 72, 0.8) 55%, transparent 80%), url(../img/ira2.jpg);
+  height: 85vh;
+  background-image: -webkit-linear-gradient(10deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.8) 55%, transparent 80%), url(../img/ira2.jpg);
+  background-image: -o-linear-gradient(10deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.8) 55%, transparent 80%), url(../img/ira2.jpg);
+  background-image: linear-gradient(80deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.8) 55%, transparent 80%), url(../img/ira2.jpg);
   background-size: cover;
   background-position: top;
   position: relative; }
   .section-content header .hero-text-box {
     position: absolute;
-    top: 60%;
+    top: 55%;
     left: 30%;
     -webkit-transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%); }
     .section-content header .hero-text-box h1 {
       color: #fff;
-      font-size: 2.2rem;
-      margin-bottom: 2rem; }
+      color: #5d6e73;
+      color: #5e6f91;
+      font-size: 2.5rem;
+      margin-bottom: 4.5rem; }
       .section-content header .hero-text-box h1 .tagline {
-        font-weight: 300; }
+        font-weight: 400; }
     .section-content header .hero-text-box .tagline2 {
       font-style: italic;
-      margin-top: 3rem;
-      font-size: 1.6rem;
-      color: #000; }
+      margin-top: 3.5rem;
+      font-size: 1.9rem;
+      color: midnightblue;
+      color: #5d6e73;
+      color: #5e6f91; }
 
 .section-workshop {
   padding: 7%;
