--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -36,6 +36,8 @@
     &:visited {
     border: 1px solid $teal-color;
     color: $teal-color;
+    // border: 1px solid $color-white;
+    // color: $color-white;
   }
 
   &:hover,
