--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -6,6 +6,13 @@
     }
 }
 
+@mixin absCenter {
+  position: absolute;;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 @mixin heading-uno {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   // font-size: $default-font-size;
@@ -36,11 +43,41 @@
 
 }
 
+//MEDIA QUERY MANAGER
+/*
+O - 600px:          Phone
+600 - 900px:        Tablet potrait mode
+900 - 1200px:        Tablet landscape mode
 
+[1200 - 1800px]     Normal styles apply...the styles when first building the website
+1800px + :          Big Screens / Big Desktops
 
+$breakpoint argument choices:
+- phone
+- tab-port
+- tab-land
+- big-desktop
 
-// @mixin centerhorizontalvertical {
-//         top: 50%;
-//         left: 50%;
-//         transform: translate(-50%, -50%);
-// }
+ORDER TO DO MEDIA QUERIES: Base + Tyography > General Layout > Grid > Page Layout > Components
+
+1em = 16px
+
+*/
+
+@mixin respond($breakpoint) {
+  @if $breakpoint == small-phone {
+      @media (max-width: 28.125em) { @content}; //450px
+  }
+    @if $breakpoint == phone {
+        @media (max-width: 37.5em) { @content}; //600px
+    }
+    @if $breakpoint == tab-port {
+        @media (max-width: 56.25em) { @content}; //900px
+    }
+    @if $breakpoint == tab-land {
+        @media (max-width: 75em) { @content}; //1200px
+    }
+    @if $breakpoint == big-desktop {
+        @media (min-width: 112.5em) { @content}; //1800px
+    }
+}
