--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -3,7 +3,7 @@
 *::before {
     margin: 0;
     padding: 0;
-    box-sizing: inherit;  
+    box-sizing: inherit;
 }
 
 html {
@@ -11,11 +11,33 @@ html {
     // overflow: scroll;
     height: 100%;
     // This defines what 1 rem is
-    font-size: 62.5%; /*  10px/16   */
+    font-size: 62.5%; /* 1rem = 10px; 10px/16px = 62.5%  */
+
+    // @include respond(phone){
+    //   font-size: 50%; //unncessesary the tab-port will be inherited here
+    // }
+    @include respond(tab-land){ //this asks is width < 1200?
+      font-size: 56.25%;/* 1rem = 9px; 9px/16px = 56.25%  */
+    }
+
+    @include respond(tab-port){ //this asks is width < 900?
+      font-size: 50%; /* 1rem = 8px; 8px/16px = 50%  */
+    }
+
+    @include respond(phone){ //this asks is width < 600?
+      // font-size: 37.5%; /* 1rem = 6px; 6px/16px = 37.5%  */
+    }
+
+    // @include respond(phone){
+    //   font-size: 30%; /* 1rem = 4.8px; 4.8px/16px = 30%  */
+    // }
+
+    @include respond(big-desktop){
+      font-size: 75%; /* 1rem = 12px; 12px/16px = 75%  */
+    }
 }
 
 body {
     height: 100%;
-    box-sizing: border-box; 
+    box-sizing: border-box;
 }
-
