--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -7,6 +7,10 @@
     &:not(:last-child) { //everything except last child
         // margin-bottom: $gutter-vertical;
         margin-bottom: 4rem;
+
+        @include respond(small-phone){
+          margin-bottom: 0rem;
+        }
     }
 
     @include clearfix;
@@ -24,6 +28,11 @@
 
     .col-1-of-2 {
         width: calc( (100% - #{$gutter-horizontal}) / 2 );
+
+        @include respond(small-phone){
+          width: 100%;
+          margin-bottom: 2.5rem;
+        }
     }
 
     .col-1-of-3 {
@@ -87,6 +96,9 @@
         padding-bottom: 6rem;
         // overflow-y: scroll;
     //    overflow-x: hidden;
+    @include respond(tab-port){
+        display: none;
+    }
     }
 
     .col-3-of-3 {
@@ -97,6 +109,10 @@
         // margin-left: calc( (100% - 2 * #{$gutter-horizontal}) / 3 + #{$gutter-horizontal} );
         overflow: scroll;
         max-height: 100%;
+
+        @include respond(tab-port){
+          width: 100%;
+        }
     }
 
 
