--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -334,6 +334,13 @@
         left: 30%;
         transform: translate(-50%,-50%);
 
+        @include respond(phone){
+          // left: 34%;
+        }
+        @include respond(phone){
+          left: 34%;
+        }
+
        h1 {
          color: $color-white;
          color: #5d6e73;
@@ -347,6 +354,14 @@
          // letter-spacing: 1px;
          // word-spacing: 3px;
          margin-bottom: 4.5rem;
+
+         @include respond(phone){
+              font-size: 2rem;
+         }
+
+         @include respond(small-phone){
+              font-size: 1.6rem;
+         }
 
          .tagline {
            font-weight: 400;
@@ -366,6 +381,12 @@
          color: #5e6f91;
          // color: wheat;
          // text-shadow: 1px 0px black;
+         @include respond(phone){
+              font-size: 1.5rem;
+         }
+         @include respond(small-phone){
+              font-size: 1.2rem;
+         }
        }
      }
     }
@@ -436,6 +457,14 @@
                      transparent 80%),
                      url(../img/bench.jpg);
     background-size: cover;
+
+    @include respond(small-phone){
+      background-image: linear-gradient(-105deg,
+                      rgba(255, 255, 255, 0.9) 100%,
+                       rgba(255, 255, 255, 0.9) 100%,
+                       transparent 100%),
+                       url(../img/bench.jpg);
+    }
 
     .method-panel {
         padding: 9% 7%;
