--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -35,4 +35,5 @@ $default-font-size: 1.6rem; //default font size for the whole website text...lik
 $grid-width: 114rem;
 // $grid-width: 100%;
 $gutter-vertical: 8rem;
+$gutter-vertical-small: 6rem;
 $gutter-horizontal: 6rem; //space in between columns
