--- a/css/style.css
+++ b/css/style.css
@@ -1318,6 +1318,9 @@ table {
   background-size: cover;
   background-position: top;
   position: relative; }
+  @media (max-width: 28.125em) {
+    .section-content {
+      height: 55vh; } }
   .section-content header .hero-text-box {
     position: absolute;
     top: 55%;
