--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -284,6 +284,10 @@
     // height: 80vh;
     height: 85vh;
 
+    @include respond(small-phone){
+    height: 55vh;
+    }
+
     background-image: linear-gradient(80deg,
                     rgba(255, 255, 255, 0.8) 0%,
                      rgba(255, 255, 255, 0.8) 55%,
