--- a/css/style.css
+++ b/css/style.css
@@ -1127,15 +1127,17 @@ table {
     display: none; }
   .phone-nav__button {
     background-color: #fff;
-    height: 7rem;
-    width: 7rem;
+    height: 5rem;
+    width: 5rem;
     position: fixed;
-    top: 6rem;
-    right: 6rem;
+    top: 2rem;
+    left: 2rem;
     border-radius: 50%;
     z-index: 219;
     -webkit-box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
-    box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1); }
+    box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
+    text-align: center;
+    cursor: pointer; }
   .phone-nav__nav {
     overflow: scroll;
     height: 100vh;
@@ -1151,33 +1153,76 @@ table {
     top: 0rem;
     left: 0rem;
     list-style: none;
-    background-color: pink; }
+    background-color: pink;
+    background-color: wheat; }
   .phone-nav__item {
     margin: 1rem; }
+    .phone-nav__item--nested li {
+      font-size: 1.6rem;
+      margin-left: 7rem;
+      margin-bottom: 1rem; }
+      .phone-nav__item--nested li a {
+        text-decoration: none;
+        color: #009999; }
   .phone-nav__link:link, .phone-nav__link:visited {
+    cursor: default;
     display: inline-block;
-    font-size: 3rem;
-    font-weight: 300;
-    color: #fff;
+    font-size: 2.4rem;
+    color: #5e6f91;
     padding: 1rem 2rem;
-    text-decoration: none;
-    text-transform: uppercase;
-    background-image: -webkit-linear-gradient(330deg, transparent 0%, transparent 50%, #fff 50%);
-    background-image: -o-linear-gradient(330deg, transparent 0%, transparent 50%, #fff 50%);
-    background-image: linear-gradient(120deg, transparent 0%, transparent 50%, #fff 50%);
-    background-size: 220%;
-    -webkit-transition: all .4s;
-    -o-transition: all .4s;
-    transition: all .4s; }
-  .phone-nav__link:hover, .phone-nav__link:active {
-    background-position: 100%;
-    color: #55c57a;
-    -webkit-transform: translateX(1rem);
-    -ms-transform: translateX(1rem);
-    transform: translateX(1rem); }
+    text-decoration: none; }
   .phone-nav__checkbox:checked ~ .phone-nav__nav {
     opacity: 1;
     width: 100%; }
+  .phone-nav__icon {
+    position: relative;
+    margin-top: 2.5rem; }
+    .phone-nav__icon, .phone-nav__icon::before, .phone-nav__icon::after {
+      width: 3rem;
+      height: 2px;
+      background-color: #333;
+      background-color: #008080;
+      display: inline-block; }
+    .phone-nav__icon::before, .phone-nav__icon::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      -webkit-transition: all .2s;
+      -o-transition: all .2s;
+      transition: all .2s; }
+    .phone-nav__icon::before {
+      top: -.8rem; }
+    .phone-nav__icon::after {
+      top: .8rem; }
+  .phone-nav__button:hover .phone-nav__icon::before {
+    top: -1rem; }
+  .phone-nav__button:hover .phone-nav__icon::after {
+    top: 1rem; }
+  .phone-nav__checkbox:checked + .phone-nav__button .phone-nav__icon {
+    background-color: transparent; }
+  .phone-nav__checkbox:checked + .phone-nav__button .phone-nav__icon::before {
+    top: 0;
+    -webkit-transform: rotate(135deg);
+    -ms-transform: rotate(135deg);
+    transform: rotate(135deg); }
+  .phone-nav__checkbox:checked + .phone-nav__button .phone-nav__icon::after {
+    top: 0;
+    -webkit-transform: rotate(-135deg);
+    -ms-transform: rotate(-135deg);
+    transform: rotate(-135deg); }
+
+.header-phone {
+  text-align: center;
+  font-size: 2.8rem;
+  color: #fff;
+  display: inline-block;
+  width: 100%;
+  padding: 2rem 2rem 2rem 8rem;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  left: 0;
+  background-color: #008080; }
 
 .section-recent {
   background-color: #fff; }
