--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -12,16 +12,20 @@ html {
     height: 100%;
     // This defines what 1 rem is
     font-size: 62.5%; /* 1rem = 10px; 10px/16px = 62.5%  */
+    // font-size: 87.5%; //14px/16px
+
 
     // @include respond(phone){
     //   font-size: 50%; //unncessesary the tab-port will be inherited here
     // }
     @include respond(tab-land){ //this asks is width < 1200?
       font-size: 56.25%;/* 1rem = 9px; 9px/16px = 56.25%  */
+    // font-size: 75%; //12px/16px
     }
 
     @include respond(tab-port){ //this asks is width < 900?
-      font-size: 50%; /* 1rem = 8px; 8px/16px = 50%  */
+      // font-size: 50%; /* 1rem = 8px; 8px/16px = 50%  */
+      // font-size: 62.5%; //10px/16px
     }
 
     @include respond(phone){ //this asks is width < 600?
@@ -34,6 +38,7 @@ html {
 
     @include respond(big-desktop){
       font-size: 75%; /* 1rem = 12px; 12px/16px = 75%  */
+      // font-size: 100%;
     }
 }
 
